# homeassistant-customapps

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: project-map.md
.github/workflows/: publish.yml  validate.yml
frontend/: ha-chat-panel.js  ha-data-provider.js  ha-localization.js  ha-panel-shell.js  ha-shared-utils.js
src/ha_customapps/: __init__.py  config_helpers.py  const.py  credential_store.py  entity_utils.py  llm.py  panel.py  repairs.py  restart.py  version.py
templates/addon/: config.yaml  repository.yaml  run.sh
templates/ci/: release.yml  validate.yml
templates/integration/: repairs.py  strings.json
